# monk

./: .gitignore  BENCHMARK.md  CLAUDE.md  CONTRIBUTING.md  README.md  convert_datasets.py  docker-compose.yml  generate_gaia_traces.py  prometheus.yml  pyproject.toml  run_gaia.py
.github/workflows/: ci.yml
grafana/: dashboard.json
grafana/provisioning/dashboards/: monk.yml
grafana/provisioning/datasources/: prometheus.yml
monk/: __init__.py  cli.py  pricing.py  report.py  samples.py  serve.py  simulate.py  usage_analyzer.py
monk/detectors/: __init__.py  agent_loop.py  base.py  context_bloat.py  cross_turn_memory.py  empty_return.py  error_cascade.py  handoff_loop.py  latency_spike.py  model_overkill.py  output_format.py  plan_execution.py  retry_loop.py  span_consistency.py  text_io.py  token_bloat.py  tool_dependency.py
monk/parsers/: __init__.py  auto.py  otel.py  usage_csv.py
monk/sdk/: __init__.py  buffer.py  instrument.py  watcher.py
scripts/: generate_gaia_traces.py  run_gaia_live.py
tests/: test_detectors.py  test_otel_parser.py  test_span_detectors.py
tests/fixtures/: demo_traces.jsonl  demo_usage.csv  finance_traces.jsonl  gaia_real_traces.jsonl  gaia_smolagents_traces.jsonl  hermes_agent_traces.jsonl  nemotron_traces.jsonl  sample_traces.jsonl  wildclaw_traces.jsonl
